@@ -87,6 +87,15 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="48~rc" date="2025-03-01" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>UI and styling fixes (fcusr, Adrien Plazas)</li>
+          <li>Do not steal focus on window move #422 (Robert Roth)</li>
+        </ul>
+      </description>
+    </release>
     <release version="48~beta" date="2025-02-01" type="development">
       <description>
         <ul>
