@@ -1,3 +1,8 @@
+Overview of changes in gnome-calculator 48.rc
+    * Updated translations
+    * UI and styling fixes (fcusr, Adrien Plazas)
+    * Do not steal focus on window move #422 (Robert Roth)
+
 Overview of changes in gnome-calculator 48.beta
     * Updated translations
     * Added Conversion mode (fcusr)
